loadtest-controller: refactor BrowserEmulatorClient and tests